# api-security-checker

./: .coverage  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: api-security-scan.yml.disabled
config/: learning-paths.yaml  payloads.yaml  vulnapi.yaml
src/: __init__.py  cli.py
src/core/: __init__.py  logging.py  patterns.py  payloads.py  scanner.py  target.py
src/modes/: __init__.py  training.py
src/reporters/: __init__.py  console.py  html_report.py  json_report.py  sarif_report.py
src/scanners/: __init__.py
src/scanners/api/: __init__.py  auth.py  bola.py  exposure.py  graphql.py  injection.py  legacy.py  logging.py  mass_assignment.py
src/scanners/recon/: __init__.py  endpoints.py  fuzzer.py  headers.py  known_files.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_cli.py
tests/unit/: __init__.py  test_auth_scanner.py  test_bola_scanner.py  test_core.py  test_graphql_scanner.py  test_headers_scanner.py  test_injection_scanner.py  test_payloads.py  test_recon_scanners.py  test_reporters.py
wordlists/: endpoints.txt  files.txt
